@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# "$Id: Makefile.am,v 1.20 2004-05-16 15:20:21 jeekay Exp $"
+# "$Id: Makefile.am,v 1.21 2005-03-20 16:39:26 jeekay Exp $"
 
 lib_LTLIBRARIES = libcservice.la
 libcservice_la_LDFLAGS = -module -export-dynamic -L@PGSQL_LIB@ \
@@ -29,7 +29,7 @@ libcservice_la_SOURCES = cservice.cc \
 	DEVOICECommand.cc \
 	FORCECommand.cc \
 	GETLEVELCommand.cc \
-	GLOBNOTICECommand.cc \
+	GLOBALNOTICECommand.cc \
 	GSUSPENDCommand.cc \
 	GUNSUSPENDCommand.cc \
 	HELPCommand.cc \
