@@ -1,5 +1,5 @@
 #ifndef __CSERVICECOMMANDS_H
-#define __CSERVICECOMMANDS_H "$Id: cserviceCommands.h,v 1.22 2004-05-16 15:20:22 jeekay Exp $"
+#define __CSERVICECOMMANDS_H "$Id: cserviceCommands.h,v 1.23 2005-03-20 16:39:27 jeekay Exp $"
 
 #include	<string>
 #include	"iClient.h"
@@ -124,7 +124,7 @@ DECLARE_COMMAND( FORCE )
 DECLARE_COMMAND( GETLEVEL )
 DECLARE_COMMAND( GSUSPEND )
 DECLARE_COMMAND( GUNSUSPEND )
-DECLARE_COMMAND( GLOBNOTICE )
+DECLARE_COMMAND( GLOBALNOTICE )
 DECLARE_COMMAND( INVME ) 
 DECLARE_COMMAND( OFFICIAL )
 DECLARE_COMMAND( PURGE )
